\name{GSARnews}
\title{GSAR News}
\encoding{UTF-8}

\section{Version 1.0.0}{\itemize{

\item
This is the first version of the R package GSAR.

\item
The package provides two-sample nonparametric multivariate statistical methods to test specific alternative hypotheses 
against a null hypothesis.

\item
GSAR depends on package igraph to handle graphs in objects of class \code{igraph} and uses some functions too.

\item
New capabilities and future changes will be reported in subsequent versions.
}}