@@ -1,8 +1,8 @@
 Package: GSAR
 Type: Package
 Title: Gene Set Analysis in R
-Version: 1.2.0
-Date: 2014-05-25
+Version: 1.2.1
+Date: 2015-07-10
 Author: Yasir Rahmatallah <yrahmatallah@uams.edu>, Galina Glazko
         <gvglazko@uams.edu>
 Maintainer: Yasir Rahmatallah <yrahmatallah@uams.edu>, Galina Glazko
