@@ -1,3 +1,12 @@
+@ARTICLE{Rahmatallah2014bmc,
+  YEAR =         {2014},
+  AUTHOR =       {Yasir Rahmatallah and Frank Emmert-Streib and Galina Glazko},
+  TITLE =        {Comparative evaluation of gene set analysis approaches for {RNA}-{S}eq data},
+  JOURNAL =      {BMC Bioinformatics},
+  volume =       {15},
+  pages =        {397},
+}
+
 @ARTICLE{Rahmatallah2014,
   YEAR =         {2014},
   AUTHOR =       {Yasir Rahmatallah and Frank Emmert-Streib and Galina Glazko},
@@ -16,13 +25,6 @@
   volume =       {28},
   number =       {23},
   pages =        {3073--3080},
-}
-
-@UNPUBLISHED{RahmatallahSUB,
-  AUTHOR =       {Yasir Rahmatallah and Frank Emmert-Streib and Galina Glazko},
-  TITLE =        {An up-to-date guide to gene set analysis for {RNA}-{S}eq data},
-  NOTE =         {Submitted to Bioinformatics},
-  year =         {2014},
 }
 
 @ARTICLE{Friedman1979,
