@@ -2,10 +2,16 @@
 \title{GSAR News}
 \encoding{UTF-8}
 
-\section{Version 1.0.0}{\itemize{
+\section{Version 1.2.1}{\itemize{
 
 \item
-This is the first version of the R package GSAR.
+Bug fix in function HDP.ranking to accomodate the changes in package igraph (version 1.0.1).
+
+\item
+Additional steps added to the code of the second case study in the vignette to filter C2 gene sets properly.
+}}
+
+\section{Version 1.0.0}{\itemize{
 
 \item
 The package provides two-sample nonparametric multivariate statistical methods to test specific alternative hypotheses 
@@ -17,3 +23,4 @@ GSAR depends on package igraph to handle graphs in objects of class \code{igraph
 \item
 New capabilities and future changes will be reported in subsequent versions.
 }}
+
